# Nexus

./: .gitignore  ARCHITECTURE.md  BACKEND_COMPLETE.md  COMPLETE_PROJECT_OVERVIEW.md  CONTRIBUTING.md  EDITOR_PROGRESS.md  IMPLEMENTATION.md  Makefile  PLUGINS.md  README.md  START_HERE.md  START_HERE_RUST_EDITOR.md  TODO.md
backend/: .env.example  .gitignore  API_DOCUMENTATION.md  Dockerfile  README.md  docker-compose.yml  package.json  tsconfig.json
backend/prisma/: schema.prisma
backend/src/: index.ts
backend/src/config/: env.ts
backend/src/controllers/: auth.controller.ts  contact.controller.ts  user.controller.ts
backend/src/middleware/: auth.ts  errorHandler.ts  validation.ts
backend/src/routes/: auth.routes.ts  contact.routes.ts  index.ts  user.routes.ts
backend/src/utils/: jwt.ts  password.ts
editor/: Cargo.toml  README.md  build.rs
editor/.cargo/: config.toml
editor/queries/: javascript.scm  python.scm  rust.scm  typescript.scm
editor/scripts/: build-all.sh  build-linux.sh  build-macos.sh  build-windows.sh
editor/shaders/: rect.wgsl  text.wgsl
editor/src/: cursor.rs  file.rs  file_tree.rs  input.rs  main.rs  search.rs  syntax.rs  tabs.rs  text_renderer.rs
editor/src/buffer/: mod.rs
editor/src/config/: mod.rs
editor/src/renderer/: mod.rs
editor/src/ui/: mod.rs
web/: INTEGRATION_GUIDE.md  README.md  READY_FOR_PRODUCTION.md  TEST_RESULTS.md  package-lock.json  package.json  tailwind.config.ts
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/app/contact/: page.tsx
web/src/components/: Button.tsx  Card.tsx  Footer.tsx  Navigation.tsx
(+6 files in other folders)
