[package]
name = "nexus-editor"
version = "0.1.0"
edition = "2021"
authors = ["Nexus Team"]
description = "AI-native code editor with GPU acceleration"
license = "MIT"
repository = "https://github.com/yourusername/nexus"

[dependencies]
# Windowing and events
winit = "0.29"
raw-window-handle = "0.5"

# GPU rendering
wgpu = "0.19"
pollster = "0.3"

# Text buffer
ropey = "1.6"
unicode-segmentation = "1.10"

# Syntax highlighting
tree-sitter = "0.20"
tree-sitter-rust = "0.20"
tree-sitter-javascript = "0.20"
tree-sitter-typescript = "0.20"
tree-sitter-python = "0.20"

# LSP integration
tower-lsp = "0.20"
lsp-types = "0.94"

# Async runtime
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# File system
notify = "6"
walkdir = "2"

# UI and fonts
fontdb = "0.16"
cosmic-text = "0.10"

# Terminal emulation
alacritty_terminal = "0.23"

# Utilities
anyhow = "1"
log = "0.4"
env_logger = "0.11"
crossbeam = "0.8"
once_cell = "1"
parking_lot = "0.12"
bytemuck = { version = "1.14", features = ["derive"] }
dirs = "5"

# Discord integration (optional)
serenity = { version = "0.12", optional = true, default-features = false, features = ["builder", "client", "gateway", "rustls_backend"] }

[dev-dependencies]
criterion = "0.5"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 1

[features]
default = ["discord"]
discord = ["serenity"]
